--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - sudo apt-get update -qq
   - make deps
 install:
+  - make directories
   - make travis-deps
   - make install
 # command to run tests
